--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
 body {
-    background-color: lightblue;
+    background-color: rgb(66, 194, 244);
+}
+
+
+h1{
+    text-align: center;
+    color:  white;
+
+    font-family: 'Fira Sans';
+    src: url('eot/FiraSans-Hair.eot');
+    src: url('eot/FiraSans-Hair.eot') format('embedded-opentype'),
+         url('woff2/FiraSans-Hair.woff2') format('woff2'),
+         url('woff/FiraSans-Hair.woff') format('woff'),
+         url('ttf/FiraSans-Hair.ttf') format('truetype');
+    font-weight: 100;
+    font-style: normal;;
 }
