--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 h1{
     text-align: center;
-    color:  white;
+    color:  red;
 
     font-family: 'Fira Sans';
     src: url('eot/FiraSans-Hair.eot');
